# fastapi-boilerplate

./: .env.example  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yaml
docs/: intsallation.md  linting_and_formatting.md  pre-commit_setup.md
src/: __init__.py  config.py  main.py
